<resources>
    <string name="app_name">AndroiEstudosKotlin</string>

    <!--App Gasto Viagem-->
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="calcular">Calcular</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="label_gasto_total">Seu gasto total será de:</string>
    <string name="br_zero">R$ 0</string>
    <string name="preencha_campos">Preencha todos os campos!</string>
    <string name="preenche_valores_validos">Preencha com valores válidos!</string>

    <!--App Motivation-->
    <string name="app_motivation_nova_frase">Nova frase</string>
    <string name="app_motivation_qual_seu_nome">Qual seu nome?</string>
    <string name="app_motivation_usuario">Usuário</string>
    <string name="app_motivation_frase">Frase</string>
    <string name="app_motivation_salvar">Salvar</string>
    <string name="app_motivation_vamos_comecar">Vamos começar?</string>
    <string name="app_motivation_todas_as_frases">Todas as frases</string>
    <string name="app_motivation_frases_de_motivacao">Frases de motivação</string>
    <string name="app_motivation_frases_para_manha">Frases para manhã</string>

</resources>