<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/purple_200"
    tools:context=".Curso_UdemyKotlin2022.apps.Motivation.ui.AppMotivationMain">

    <LinearLayout
        android:id="@+id/appmotivation_menu_superior"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/appmotivation_image_all"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_motivation_todas_as_frases"
            android:src="@drawable/ic_infinity" />

        <ImageView
            android:id="@+id/appmotivation_image_happy"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_motivation_frases_de_motivacao"
            android:src="@drawable/ic_happy_white" />

        <ImageView
            android:id="@+id/appmotivation_image_morning"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_motivation_frases_para_manha"
            android:src="@drawable/ic_sun" />

    </LinearLayout>

    <TextView
        android:id="@+id/appmotivation_text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appmotivation_menu_superior"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/app_motivation_usuario"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/appmotivation_text_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="100dp"
        android:text="@string/app_motivation_frase"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/appmotivation_text_phrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/appmotivation_button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ripple_button"
        android:elevation="5dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/app_motivation_nova_frase"
        android:textColor="@color/white" />

</RelativeLayout>