<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".Curso_UdemyKotlin2022.apps.Motivation.ui.AppMotivationHome">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/app_motivation_vamos_comecar"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/appmotivation_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:hint="@string/app_motivation_qual_seu_nome"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/appmotivation_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAccent"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/app_motivation_salvar"
        android:textColor="@color/white" />

</RelativeLayout>